--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "moti": "^0.17.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
